--- a/templates/notes.html
+++ b/templates/notes.html
@@ -193,6 +193,7 @@ body {
             <h3>{{ note.topic }}</h3>
             <p>{{ note.content }}</p>
             <a href="/notes/delete/{{ note.sno }}">Delete</a>
+            <a href="/notes/update/{{ note.sno }}">Update</a>
         </div>
         {% endfor %}
     </div>
