--- a/templates/notes.html
+++ b/templates/notes.html
@@ -11,6 +11,7 @@
             padding: 0;
         }
 
+        
         .container {
             max-width: 800px;
             margin: 60px auto;
@@ -163,7 +164,7 @@ body {
 </head>
 
 <nav class="navbar" id="navbar">
-    <a href="/" class="brand">NoteVault</a>
+    <a href="/" class="brand">Pass-Out Locker</a>
     <span class="menu-toggle" onclick="toggleMenu()">☰</span>
     <div class="navbar-links">
       <a href="/">Passwords</a>
