--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
 
     /* Navbar */
     .navbar {
-      position: fixed;
+      position: absolute;
       top: 0;
       width: 100%;
       background-color: #4CAF50;
