--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,6 @@
       position: absolute;
       top: 0;
       width: 100%;
-      background-color: #4CAF50;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -30,7 +29,7 @@
     }
 
     .brand {
-      color: white;
+      color: black;
       font-size: 22px;
       font-weight: bold;
       text-decoration: none;
@@ -42,7 +41,7 @@
     }
 
     .navbar-links a {
-      color: white;
+      color: black;
       text-decoration: none;
       padding: 10px;
       font-weight: 500;
