--- a/templates/notes.html
+++ b/templates/notes.html
@@ -13,12 +13,12 @@
 
         
         .container {
-            max-width: 800px;
-            margin: 60px auto;
+            max-width: 600px;
+            margin: 80px auto;
             padding: 20px;
             background-color: white;
             border-radius: 12px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.05);
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         }
 
         h1 {
@@ -41,6 +41,8 @@
             border: 1px solid #ccc;
             font-size: 16px;
             box-sizing: border-box;
+            border-left: 6px solid #4CAF50;
+
         }
 
         button {
@@ -54,7 +56,7 @@
         }
 
         button:hover {
-            background-color: #45a049;
+            background-color:rgb(60, 115, 63);
         }
 
         .note {
@@ -96,7 +98,6 @@ body {
   position: absolute;
   top: 0;
   width: 100%;
-  background-color: #4CAF50;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -105,7 +106,7 @@ body {
 }
 
 .navbar .brand {
-  color: white;
+  color: black;
   font-size: 22px;
   font-weight: bold;
   text-decoration: none;
@@ -117,7 +118,7 @@ body {
 }
 
 .navbar-links a {
-  color: white;
+  color: black;
   text-decoration: none;
   padding: 14px 10px;
   font-weight: 500;
