--- a/templates/update_notes.html
+++ b/templates/update_notes.html
@@ -42,6 +42,8 @@
             border-radius: 8px;
             box-sizing: border-box;
             font-size: 16px;
+            border-left: 6px solid #4CAF50;
+
         }
 
         button {
@@ -56,7 +58,7 @@
         }
 
         button:hover {
-            background-color: #4CAF50;
+            background-color:rgb(60, 115, 63);
         }
 
         .btn-secondary {
@@ -65,7 +67,7 @@
         }
 
         .btn-secondary:hover {
-            background-color: #5a6268;
+            background-color: rgb(60, 115, 63);
         }
 
         .btn-group {
