--- a/templates/notes.html
+++ b/templates/notes.html
@@ -60,8 +60,8 @@
         }
 
         .note {
-            background-color: #fafafa;
-            padding: 15px 20px;
+            background-color:rgb(237, 244, 237);
+            padding: 10px 10px;
             border-left: 6px solid #4CAF50;
             border-radius: 8px;
             margin-bottom: 15px;
@@ -73,17 +73,20 @@
         }
 
         .note p {
-            color: #555;
+            color: rgb(0, 0, 0);
+            margin-bottom: 10px;
         }
 
         .note a {
             color: #e74c3c;
             text-decoration: none;
             font-weight: bold;
+            margin-right: 15px;
         }
 
         .note a:hover {
-            text-decoration: underline;
+          color:rgb(148, 75, 67);
+          text-decoration: underline;
         }
         * {
   box-sizing: border-box;
