--- a/templates/notes.html
+++ b/templates/notes.html
@@ -29,7 +29,7 @@
     .navbar .brand {
       font-size: 22px;
       font-weight: bold;
-      color:rgb(0, 0, 0);s
+      color:rgb(0, 0, 0);
       text-decoration: none;
     }
 
