--- a/templates/update.html
+++ b/templates/update.html
@@ -12,7 +12,7 @@
 
         h2 {
             text-align: center;
-            color: #7d0e87;
+            color: #4CAF50;
             padding-bottom: 20px;
         }
 
@@ -30,7 +30,7 @@
             font-weight: bold;
             display: block;
             margin-top: 15px;
-            color: #7d0e87;
+            color: #4CAF50;
         }
 
         input[type="text"] {
@@ -43,7 +43,7 @@
         }
 
         button {
-            background-color: #7d0e87;
+            background-color: #4CAF50;
             color: white;
             padding: 10px 20px;
             border: none;
